--- a/medplus-monorepo/apps/web/package.json
+++ b/medplus-monorepo/apps/web/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@medplus/api-client": "*",
     "@medplus/shared-types": "*",
-    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.16",
     "clsx": "^2.1.1",
@@ -23,6 +23,10 @@
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "react-intersection-observer": "^10.0.2",
+    "react-loading-skeleton": "^3.5.0",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
