--- a/medplus-monorepo/apps/mobile/package.json
+++ b/medplus-monorepo/apps/mobile/package.json
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "8.0.0",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
+    "@rollup/rollup-win32-x64-msvc": "^4.34.9",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.16",
     "@types/react-router": "^5.1.20",
