chore: add next to root and update vercel config for deployment

--- a/medplus-monorepo/package.json
+++ b/medplus-monorepo/package.json
@@ -15,6 +15,7 @@
         "mobile": "npm run dev --workspace=@medplus/mobile"
     },
     "devDependencies": {
+        "next": "16.1.1",
         "turbo": "^1.11.2",
         "typescript": "^5.3.3"
     },
