--- a/medplus-monorepo/vercel.json
+++ b/medplus-monorepo/vercel.json
@@ -1,6 +1,5 @@
 {
     "buildCommand": "npx turbo run build --filter=@medplus/web",
     "outputDirectory": "apps/web/.next",
-    "installCommand": "npm install",
-    "framework": "nextjs"
+    "installCommand": "npm install"
 }
