--- a/medplus-monorepo/package.json
+++ b/medplus-monorepo/package.json
@@ -11,8 +11,7 @@
         "build": "turbo run build",
         "lint": "turbo run lint",
         "clean": "turbo run clean && rm -rf node_modules",
-        "web": "npm run dev --workspace=@medplus/web",
-        "mobile": "npm run dev --workspace=@medplus/mobile"
+        "web": "npm run dev --workspace=@medplus/web"
     },
     "devDependencies": {
         "next": "16.1.1",
